styl quiz-module

--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -9,17 +9,17 @@
 				<div id="graph-info-panel" class="panel panel-ksi">
 				  <div class="panel-heading panel-heading-ksi"><h4 align="center">Vysvětlivky</h4></div>
 				  <div class="panel-body">
-						<img src="img/nodes/base/node-green.svg" class="node-info"/>Algoritmické úkoly<br>
-						<img src="img/nodes/base/node-blue.svg" class="node-info"/>Programovací úkoly<br>
-						<img src="img/nodes/base/node-red.svg" class="node-info"/>Speciální úkoly<br>
-						<img src="img/nodes/base/node-orange.svg" class="node-info"/>Teoretické úkoly<br>
-						<img src="img/nodes/base/node-bronze-unknown.svg" class="node-info"/>Úkoly s překvapením<br>
-						<img src="img/nodes/base/node-orange-blue.svg" class="node-info"/>Zmíchané úkoly<br>
-						<img src="img/nodes/base/node-big.svg" class="node-info-big"/>Velké úkoly<br><!--TODO-->
+						<img src="img/nodes/base/node-green.svg" class="node-info"/>Algoritmická úloha<br>
+						<img src="img/nodes/base/node-blue.svg" class="node-info"/>Programovací úloha<br>
+						<img src="img/nodes/base/node-red.svg" class="node-info"/>Speciální úloha<br>
+						<img src="img/nodes/base/node-orange.svg" class="node-info"/>Teoretická úloha<br>
+						<img src="img/nodes/base/node-bronze-unknown.svg" class="node-info"/>Úloha s překvapením<br>
+						<img src="img/nodes/base/node-orange-blue.svg" class="node-info"/>Zmíchaná úloha<br>
+						<img src="img/nodes/base/node-big.svg" class="node-info-big"/>Velká úloha<br><!--TODO-->
 						<hr>
-						<img src="img/nodes/base/node-locked.svg" class="node-info"/>Uzamčené úkoly<br>
-						<img src="img/nodes/base/node-done-icon.svg" class="node-info"/>Opravené úkoly<br>
-						<img src="img/nodes/base/node-correcting-icon.svg" class="node-info"/>Neopravené úkoly<br>
+						<img src="img/nodes/base/node-locked.svg" class="node-info"/>Uzamčená úloha<br>
+						<img src="img/nodes/base/node-done-icon.svg" class="node-info"/>Opravená úloha<br>
+						<img src="img/nodes/base/node-correcting-icon.svg" class="node-info"/>Neopravená úloha<br>
 						<hr>
 						prerekvizity TODO
 				  </div>
