--- a/app/templates/components/quiz-module.hbs
+++ b/app/templates/components/quiz-module.hbs
@@ -1,21 +1,28 @@
-<div class="row" style="margin:20px">
-	{{{module.description}}}
+<div class="row" style="margin-left:0px">
+	<div style="margin-bottom: 20px">
+		{{{module.description}}}
+	</div>
 	{{#if general_error}}
 		{{warning-general text=general_error}}
 	{{/if}}
 </div>
-<div class="controls" style="margin:20px">
-	{{#each module.questions.questions as |question index|}}
-		<div class="panel panel-task">
-			<div class="panel-body">
-				{{warning-general text="Položku je nutno vyplnit" id=(construct-id "w" id index) class="hide"}}
-				{{{question.question}}}
-				{{#each question.options as |option number|}}
-					<div>
-						<label>{{input type=question.type name=(construct-id "group" id index) id=(construct-id "id_q" index number) class=(construct-id "group" id index)}} {{option}}</label>
-					</div>
-				{{/each}}
-			</div>
+
+<div class="controls" style="margin-left:0px">
+	<div class="panel panel-task">
+		<div class="panel-body">
+			{{#each module.questions.questions as |question index|}}
+						<div class="panel panel-ksi">
+						  <div class="panel-heading panel-heading-ksi">{{{question.question}}}</div>
+						  <div class="panel-body">
+								{{warning-general text="Položku je nutno vyplnit" id=(construct-id "w" id index) class="hide"}}
+								{{#each question.options as |option number|}}
+									<div>
+										<label>{{input type=question.type name=(construct-id "group" id index) id=(construct-id "id_q" index number) class=(construct-id "group" id index)}} {{option}}</label>
+									</div>
+								{{/each}}
+						  </div>
+						</div>
+			{{/each}}
 		</div>
-	{{/each}}
+	</div>
 </div>
