--- a/app/templates/components/sortable-module.hbs
+++ b/app/templates/components/sortable-module.hbs
@@ -4,20 +4,20 @@
 		{{warning-general text=general_error}}
 	{{/if}}
 </div>
-<div class="row" style="margin-left:20px">
+<div class="row" style="margin-left:5px">
 	<div class="col-xs-12 col-sm-6">
-		Výsledek:
+		<h5>Výsledek:</h5>
 		<ul class="sortable list" id="sortable{{id}}a">
 			{{#each module.sortable_list.fixed as |line index|}}
-				<li class="{{line.style}} static" id="a{{index}}"><span class="handle">::&nbsp;</span>{{line.content}}</li>
+				<li draggable="true" class="{{line.style}} static" id="a{{index}}">{{line.content}}</li>
 			{{/each}}
 		</ul>
 	</div>
 	<div class="col-xs-12 col-sm-6">
-		Použij tyto řádky
+		<h5>Použij tyto řádky:</h5>
 		<ul class="sortable list" id="sortable{{id}}b">
 			{{#each module.sortable_list.movable as |line index|}}
-				<li class="{{line.style}}" id="b{{index}}"><span class="handle">::&nbsp;</span>{{line.content}}</li>
+				<li draggable="true" class="{{line.style}} highlight" id="b{{index}}">{{line.content}}</li>
 			{{/each}}
 		</ul>
 	</div>
