--- a/app/styles/components/buttons.scss
+++ b/app/styles/components/buttons.scss
@@ -36,25 +36,24 @@
     color: ksi-color('primary-orange');
     box-shadow: none;
 }
-.btn-file {
+
+.fileUpload {
     position: relative;
     overflow: hidden;
+    width: 200px;
 }
-.btn-file input[type=file] {
+.fileUpload input.upload {
     position: absolute;
     top: 0;
     right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    font-size: 100px;
-    text-align: right;
-    filter: alpha(opacity=0);
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
     opacity: 0;
-    outline: none;
-    background: white;
-    cursor: inherit;
-    display: block;
+    filter: alpha(opacity=0);
 }
+
 //
 // start button
 //
