--- a/app/templates/components/code-module.hbs
+++ b/app/templates/components/code-module.hbs
@@ -6,9 +6,13 @@
         {{warning-general text=general_error}}
     {{/if}}
     <button class="btn btn-primary btn-task inline" style="margin-top:20px" {{action "toggle_info"}}>{{info_button_text}}</button>
-    {{#if show_info}}
-        {{info-general text="Náš kód se používá blablabalba. Nemůžeš používat blablaba."}}
-    {{/if}}
+
+    <div style="margin-top:20px">
+      {{#if show_info}}
+          {{info-general text="Náš kód se používá blablabalba. Nemůžeš používat blablaba."}}
+      {{/if}}
+    </div>
+    
     <div class="row" style="margin-top:20px; margin-left:0px">
         <label for="threadName">Editor kódu</label>
         {{code-editor content=module.code  id=(construct-id "editor_module" id)}}
