--- a/app/templates/settings/personal.hbs
+++ b/app/templates/settings/personal.hbs
@@ -1,4 +1,4 @@
-{{#validatable-form action="save"}}
+{{#validatable-form action="save" model=model}}
   {{#if general_error}}
     {{warning-general text=general_error}}
   {{/if}}
@@ -142,4 +142,5 @@
   <button type="submit" class="btn btn-primary" style="margin-top:20px; width:100%;">
     Ulož změny
   </button>
+  <!--{{async-button class="button btn btn-primary" style="margin-top:20px; width:100%;" isLoading=isSaving isValid=isValid value="Ulož změny"}}-->
 {{/validatable-form}}
