Fix profile name

--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -44,7 +44,7 @@
                           <img src="{{session.current_user.profile_pic}}" style="margin:0width:53px;"/>
                       </div>--><!-- foto nefunguje opravim ked pridem -->
                       <div id="header-text" style=" margin-left:10px; display:inline">
-                        {{session.current_user.name}}
+                        {{session.current_user.full_name}}
                       </div>
                       <div style=" margin-left:10px; display:inline">
                         <span class="glyphicon glyphicon-menu-down" aria-hidden="true" style="color:#fff"></span>
