--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -5,7 +5,7 @@
 				<img src="{{model.profile_pic}}" style="width:100%; max-width:250px;"/>
 			</div>
 			<div id="name" style="margin-top:30px; margin-left:5px">
-				<h3>{{model.name}}</h3>
+				<h3>{{model.full_name}}</h3>
 			</div>
 			<div id="name">
 				<p id="profile-text">{{model.short_info}}</p>
