--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -16,5 +16,32 @@
         {{render "footer"}}
     </div>
 </div/>
+
+<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
+  <div class="modal-dialog">
+     <div class="loginmodal-container">
+    <p data-toggle="modal" data-target="#login-modal" style="margin-left:20px; text-align: right;">
+          <a href="javascript:void(0)">zavřít</a>
+    </p>
+     <div align="center">
+             <img src="img/karlik_color.png" style="max-width:200px; vertical-align: middle;"/>
+     </div>
+    <br>
+    {{#if login_error_message}}
+      {{login_error_message}}
+    {{/if}}
+      <form>
+      {{input value=identification placeholder="přihlašovací jméno"}}
+        {{input type="password" value=password placeholder="heslo"}}
+        <input type="submit" name="login"  class="btn btn-primary" value="Přihlas se" {{action 'login'}}>
+      </form>
+
+      <div class="login-help">
+      <p data-toggle="modal" data-target="#login-modal" style="margin-left:20px; text-align: right;">{{#link-to "registration"}}Registrovat se{{/link-to}} - {{#link-to "forgot-password"}}Zapomenuté heslo{{/link-to}}</p> <!-- TODO toogle button -->
+      </div>
+     </div>
+  </div>
+</div>
+
 <script src="js/index.js"></script>
 <script src="js/jquery.qtip.js"></script>
