--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -61,7 +61,7 @@
             {{else}}
               <li>
                 <p class="navbar-btn" data-toggle="modal" data-target="#login-modal" style="margin-left:20px">
-                      <a href="javascript:void(0)" class="btn btn-header" style="width:130px">Přihlásit se</a>
+                      <a href="javascript:void(0)" class="btn btn-header" style="width:130px" id="login_button">Přihlásit se</a>
                 </p>
               </li>
               <li>
@@ -75,28 +75,4 @@
     </div>
 </nav>
 
-<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
-  <div class="modal-dialog">
-	 <div class="loginmodal-container">
-    <p data-toggle="modal" data-target="#login-modal" style="margin-left:20px; text-align: right;">
-          <a href="javascript:void(0)">zavřít</a>
-    </p>
-     <div align="center">
-		     <img src="img/karlik_color.png" style="max-width:200px; vertical-align: middle;"/>
-     </div>
-    <br>
-    {{#if error_message}}
-      {{error_message}}
-    {{/if}}
-	  <form>
-      {{input value=identification placeholder="přihlašovací jméno"}}
-  		{{input type="password" value=password placeholder="heslo"}}
-  		<input type="submit" name="login"  class="btn btn-primary" value="Přihlas se" {{action 'login'}}>
-	  </form>
 
-	  <div class="login-help">
-      <p data-toggle="modal" data-target="#login-modal" style="margin-left:20px; text-align: right;">{{#link-to "registration"}}Registrovat se{{/link-to}} - {{#link-to "forgot-password"}}Zapomenuté heslo{{/link-to}}</p> <!-- TODO toogle button -->
-	  </div>
-	 </div>
-  </div>
-</div>
