--- a/app/styles/components/tasks-graph.scss
+++ b/app/styles/components/tasks-graph.scss
@@ -14,3 +14,25 @@
   text-wrap: wrap;
   text-max-width: 70px;
 }
+
+.graph-qtip {
+  background: white;//ksi-color-level('primary-orange',9.5);
+  color: ksi-color('secondary-orange');
+
+  border-radius: 5px;
+  border-color: ksi-color-level('primary-orange',6);
+
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.graph-qtip .qtip-title{
+  margin: 5px;
+  text-align: left;
+  text-transform: uppercase;
+  font-size: 15px;
+}
+
+.graph-qtip .qtip-content{
+  margin: 5px;
+  font-size: 14px;
+}
