--- a/app/styles/base/typography.scss
+++ b/app/styles/base/typography.scss
@@ -46,6 +46,12 @@ h6 {
   font-size:medium;
   color: ksi-color-level('text-dark', 5);
 }
+
+.graph-qtip-text {
+  padding-top: 3px;
+  color: ksi-color('secondary-orange');
+  font-weight: bold;
+}
 #profile-text {
   margin-right: 15px;
   margin-left: 7px;
