obrazky graf, buggy, styling profilovych fotiek

--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -113,7 +113,7 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-xs-6">
-								<img class="inline" src="{{result.task.picture}}">
+								<img class="inline" src="{{result.task.picture}}" style="max-width: 45px">
 								<label class="inline" style="margin-left:10px">{{#link-to "task" result.task}}{{result.task.title}}{{/link-to}}</label>
 							</div>
 							<div class="col-xs-4">
