--- a/app/styles/base/typography.scss
+++ b/app/styles/base/typography.scss
@@ -21,6 +21,13 @@ h6 {
   color: ksi-color('primary-dark');
 }
 
+.org-caption-images {
+  text-transform: uppercase;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: ksi-color('primary-light');
+}
+
 .gray-text {
   color: ksi-color-level('text-dark', 5);
 }
@@ -52,6 +59,7 @@ h6 {
   color: ksi-color('secondary-orange');
   font-weight: bold;
 }
+
 #profile-text {
   margin-right: 15px;
   margin-left: 7px;
