--- a/app/templates/components/orgs-list.hbs
+++ b/app/templates/components/orgs-list.hbs
@@ -1,16 +1,20 @@
 {{#each model as |org index|}}
-    <div class="col-xs-6 col-md-3">
+    <div class="col-xs-6 col-md-3" style="margin:20px">
 
         <a href="#" data-target="#toggle{{index}}" class="hcaption" cap-overlay_bg="black" cap-overlay_opacity="0.5">
             {{#link-to "user-profile" org}}
-                <img src="{{org.profile_picture}}" style="width: 100%">
+                <img src="{{org.profile_picture}}" style="
+                  width: 220px;
+                  margin: 0 auto;
+                  overflow:hidden;
+                  position: relative;
+                  height: 220px;">
             {{/link-to}}
         </a>
         <div id="toggle{{index}}" class="">
-            {{#link-to "user-profile" org}}
+            {{#link-to "user-profile" org class="org-caption-images white-link"}}
                 <span class="">{{org.full_name}}</span>
             {{/link-to}}
         </div>
     </div>
 {{/each}}
-
